Fix upload_audio route and update styles

--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,4 @@
-THEN MAKE EVERYTHING WORK WELL ON MOBILE. I CANT'T TYPE TXT MESSAGES :  * { 
+ * { 
     margin: 0;
     padding: 0;
     box-sizing: border-box;
